--- a/styles/experience.css
+++ b/styles/experience.css
@@ -120,6 +120,7 @@
     color: var(--text-color);
     position: relative;
     line-height: 1.5;
+    list-style: none;
   }
   
   .experience-tasks li::before,
